--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,7 +5,8 @@ html {
 }
 
 body {
-    max-width: 1023px;
-    margin: 0 auto !important;
+    /* max-width: 1100px */
+    /* background-color: #FFFFFF; */
+    /* margin: 0 auto !important; */
 }
 
